--- a/index.html
+++ b/index.html
@@ -2,15 +2,19 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title> Monkey of the World</title>
+<title> Monkey of the World -- Monkeys and everything about them; Ottawa Canada</title>
 <link href="css/general.css" rel="stylesheet">
 <link href="css/grid.css" rel="stylesheet">
 <meta name="handheldfriendly" content="true">
 <meta name= "mobileoptimized" content="240">
 <meta name= "viewport" content= "width=device-width,initial-scale=1">
+<meta name= "description" content= "Monkeys Monkeys Monkeys Monkeys Monkeys and information all about them">
 </head>
+
 <link href='http://fonts.googleapis.com/css?family=Chango' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Dosis:300,400' rel='stylesheet' type='text/css'>
+
+
 
 <body>
 
@@ -32,10 +36,10 @@
 	</header>
 
 	<div class= "grid">
-		
+		<!-- Small left top image -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-4">
 			<div class="unit-spacer">
-				<img src="http://placehold.it/600x450" class="flex-img" alt"">
+				<img src="http://placehold.it/600x450" class="flex-img" alt"Cute monkey">
 			</div>
 		</div>
 		
@@ -46,25 +50,26 @@
 				Monkeys are a furry primate which come in many different sizes between small to medium-sized. They typically have a long tail, and hands for feet. There are about 260 known living species of monkey which can be sepreated into two groups called <a href="" ><em> New world Monkeys </em></a> and <a href="" ><em> Old World Monkeys</em>.</a>. Most kinds of Monkeys live in trees in tropical countries, and are generally considered to be intelligent.
 			</div>
 		</div>
-		
+		<!-- Small right top image -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-4">
 			<div class="unit-spacer">
-				<img src="http://placehold.it/600x450" class="flex-img" alt"">
+				<img src="http://placehold.it/600x450" class="flex-img" alt"Another Cute monkey">
 			</div>
 		</div>
 		
 		
 		
-		
+		<!-- Large  top image -->
 		<div class= "unit unit-s-1 unit-m-1 unit-l-hidden">
 			<div class="unit-spacer">
-				<img src="http://placehold.it/1000x200" class="flex-img" alt"">
+				<img src="http://placehold.it/1000x200" class="flex-img" alt" Large image of a cute monkey">
 			</div>
 		</div>
 		
+		<!-- Image beside feeding -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-2-3">
 			<div class="unit-spacer">
-				<img src="http://placehold.it/1000x300" class="flex-img" alt"">
+				<img src="http://placehold.it/1000x300" class="flex-img" alt"Monkey eating fruit">
 			</div>
 		</div>
 		
@@ -78,15 +83,16 @@
 		</div>
 		
 	
-	
+		<!-- Image beside habitat left -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-3">
 			<div class="unit-spacer">
-				<img src="http://placehold.it/1000x450" class="flex-img" alt"">
+				<img src="http://placehold.it/1000x450" class="flex-img" alt"Monkey on a tree">
 			</div>
 		</div>
+		<!-- Image beside habitat right -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-3">
 			<div class="unit-spacer">
-				<img src="http://placehold.it/1000x450" class="flex-img" alt"">
+				<img src="http://placehold.it/1000x450" class="flex-img" alt"Monkey in teh savanana">
 			</div>
 		</div>
 		
@@ -101,17 +107,17 @@
 		
 		
 	
-	
+		<!-- bottom images Left -->
 		<div class="unit unit-s-hidden unit-m-1-3 unit-l-1-3">
-			<img src="http://placehold.it/400x200" class="flex-img" alt"">
+			<img src="http://placehold.it/400x200" class="flex-img" alt"Monkey in tree's">
 		</div>
-		
+		<!-- bottom images Center -->
 		<div class="unit unit-s-1-2 unit-m-1-3 unit-l-1-3">
-			<img src="http://placehold.it/400x200" class="flex-img" alt"">
+			<img src="http://placehold.it/400x200" class="flex-img" alt"Monkey on the ground">
 		</div>
-		
+		<!-- bottom images Right -->
 		<div class="unit unit-s-1-2 unit-m-1-3 unit-l-1-3">
-			<img src="http://placehold.it/400x200" class="flex-img" alt"">
+			<img src="http://placehold.it/400x200" class="flex-img" alt"Monkey in the savanah">
 		</div>
 		
 	</div>
