--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
 		<!-- Image beside habitat left -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-3">
 			<div class="unit-spacer">
-				<img src="http://placehold.it/1000x450" class="flex-img" alt"Monkey on a tree">
+				<img src="http://placehold.it/1000x450" class="flex-img" alt"Monkey in the jungle">
 			</div>
 		</div>
 		<!-- Image beside habitat right -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-3">
 			<div class="unit-spacer">
-				<img src="http://placehold.it/1000x450" class="flex-img" alt"Monkey in teh savanana">
+				<img src="http://placehold.it/1000x450" class="flex-img" alt"Monkey in the savanana">
 			</div>
 		</div>
 		
@@ -109,15 +109,15 @@
 	
 		<!-- bottom images Left -->
 		<div class="unit unit-s-hidden unit-m-1-3 unit-l-1-3">
-			<img src="http://placehold.it/400x200" class="flex-img" alt"Monkey in tree's">
+			<img src="http://placehold.it/400x200" class="flex-img" alt"A Spider monkey">
 		</div>
 		<!-- bottom images Center -->
 		<div class="unit unit-s-1-2 unit-m-1-3 unit-l-1-3">
-			<img src="http://placehold.it/400x200" class="flex-img" alt"Monkey on the ground">
+			<img src="http://placehold.it/400x200" class="flex-img" alt"a howler monkey">
 		</div>
 		<!-- bottom images Right -->
 		<div class="unit unit-s-1-2 unit-m-1-3 unit-l-1-3">
-			<img src="http://placehold.it/400x200" class="flex-img" alt"Monkey in the savanah">
+			<img src="http://placehold.it/400x200" class="flex-img" alt" cute monkey">
 		</div>
 		
 	</div>
