--- a/index.html
+++ b/index.html
@@ -1,41 +1,8 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title> Monkey of the World -- Monkeys and everything about them; Ottawa Canada</title>
-<link href="css/general.css" rel="stylesheet">
-<link href="css/grid.css" rel="stylesheet">
-<meta name="handheldfriendly" content="true">
-<meta name= "mobileoptimized" content="240">
-<meta name= "viewport" content= "width=device-width,initial-scale=1">
-<meta name= "description" content= "Monkeys Monkeys Monkeys Monkeys Monkeys and information all about them">
-</head>
+---
+layout: default
 
-<link href='http://fonts.googleapis.com/css?family=Chango' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Dosis:300,400' rel='stylesheet' type='text/css'>
+---
 
-
-
-<body>
-
-	<header>
-	<!--
-	<div class="searchbar"> 
-<label>Search</label>
-<input type="search" placeholder="Search">
-</div>
-
--->
-			<nav> 
-				<ul>
-					<li> <a href="index.html"> Home </a> </li>
-					<li> <a href="" > Monkey Types</a> </li>
-					<li> <a href=""> Habitats </a> </li>
-					<li> <a href=""> Anatomy </a> </li>
-					<li> <a href=""> Behaviors </a> </li>
-				</ul>
-			</nav>
-	</header>
 
 	<div class= "grid">
 		<!-- Small left top image -->
@@ -49,7 +16,7 @@
 			<div class="unit-spacer">
 				<h1>Monkeys</h1>
 				<p>	
-				Monkeys are a furry primate which come in many different sizes between small to medium-sized. They typically have a long tail, and hands for feet. There are about 260 known living species of monkey which can be sepreated into two groups called <a href="" ><em> New world Monkeys </em></a> and <a href="" ><em> Old World Monkeys</em>.</a>. Most kinds of Monkeys live in trees in tropical countries, and are generally considered to be intelligent.
+				Monkeys are a furry primate which come in many different sizes between small to medium-sized. They typically have a long tail, and hands for feet. There are about 260 known living species of monkey which can be sepreated into two groups called <a href="species.html" ><em> New world Monkeys </em>and<em> Old World Monkeys</em></a>. Most kinds of Monkeys live in trees in tropical countries, and are generally considered to be intelligent.</p>
 			</div>
 		</div>
 		<!-- Small right top image -->
@@ -98,7 +65,7 @@
 			</div>
 		</div>
 		
-			<div class= "unit unit-s-1 unit-m-1-2  unit-l-1-3">
+		<div class= "unit unit-s-1 unit-m-1-2  unit-l-1-3">
 			<div class="unit-spacer">
 				<h2> Habitat </h2>
 				<p> Generally, monkeys live in forested areas with many trees although some species are known to live in the savannahs and mountain regiosn. Some monkeys live in trees and on land while other monkeys live exclusively in trees. <br>
@@ -107,35 +74,8 @@
 		</div>
 		
 		
-		
-	
-		<!-- bottom images Left -->
-		<div class="unit unit-s-hidden unit-m-1-3 unit-l-1-3">
-			<img src="http://placehold.it/400x200" class="flex-img" alt"A Spider monkey">
-		</div>
-		<!-- bottom images Center -->
-		<div class="unit unit-s-1-2 unit-m-1-3 unit-l-1-3">
-			<img src="http://placehold.it/400x200" class="flex-img" alt"a howler monkey">
-		</div>
-		<!-- bottom images Right -->
-		<div class="unit unit-s-1-2 unit-m-1-3 unit-l-1-3">
-			<img src="http://placehold.it/400x200" class="flex-img" alt" cute monkey">
-		</div>
-		
-	</div>
-	
-		<header>
-			<nav> 
-				<ul>
-					<li> <a href="index.html"> Home </a> </li>
-					<li> <a href="" > Monkey Types</a> </li>
-					<li> <a href=""> Habitats </a> </li>
-					<li> <a href=""> Anatomy </a> </li>
-					<li> <a href=""> Behaviors </a> </li>
-				</ul>
-			</nav>
-	</header>
-	
+</div>
+
 	
 </body>
 </html>
