edited species layout

--- a/species.html
+++ b/species.html
@@ -35,13 +35,6 @@ layout: default
 			</div>
 		</div>
 		
-		<!-- Image beside feeding -->
-		<div class= "unit unit-s-hidden unit-m-hidden unit-l-2-3">
-			<div class="unit-spacer">
-				<img src="http://placehold.it/1000x300" class="flex-img" alt"Monkey eating fruit">
-			</div>
-		</div>
-		
 		
 		
 		<!-- Small/medium right above old world -->
@@ -58,28 +51,22 @@ layout: default
 			</div>
 		</div>
 		
+			<!-- Image beside new world -->
+		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-3">
+			<div class="unit-spacer">
+				<img src="http://placehold.it/600x800" class="flex-img" alt"Monkey eating fruit">
+			</div>
+		</div> 
+		
 		<div class= "unit unit-s-1 unit-m-1-1  unit-l-2-3">
 			<div class="unit-spacer">
 				<h2> New World Monkeys </h2>
 				<p> New World monkeys are small to mid-sized primates, ranging from the pygmy marmoset (the world's smallest monkey), at 14 to 16 cm (5.5 to 6.3 in) and a weight of 120 to 190 grams (4.2 to 6.7 oz) to the southern muriqui, at 55 to 70 cm (22 to 28 in) and a weight of 12 to 15 kg (26 to 33 lb). New World monkeys differ slightly from Old World monkeys in several aspects. The most prominent phenotype distinction is the nose, which is the feature used most commonly to distinguish between the two groups. The clade for the New World monkeys, Platyrrhini, means "flat nosed". The noses of New World monkeys are flatter than the narrow noses of the Old World monkeys, and have side-facing nostrils. New World monkeys are the only monkeys with prehensile tails—in comparison with the shorter, non-grasping tails of the anthropoids of the Old World.
-New World monkeys (except for the howler monkeys of genus Alouatta)[4] also typically lack the trichromatic vision of Old World monkeys.[5] Colour vision in New World primates relies on a single gene on the X-chromosome to produce pigments that absorb medium and long wavelength light, which contrasts with short wavelength light. As a result, males rely on a single medium/long pigment gene and are dichromatic, as are homozygous females. Heterozygous females may possess two alleles with different sensitivities within this range, and so can display trichromatic vision.[6]
-Platyrrhines also differ from Old World monkeys in that they have twelve premolars instead of eight; having a dental formula of 
-2.1.3.3
-2.1.3.3
- (consisting of 2 incisors, 1 canine, 3 premolars, and 3 molars. This is in contrast with Old World Anthropoids, including humans, gorillas, chimps, bonobos, siamangs, gibbons and orangutans, which share a dental formula of 
-2.1.2.3
-2.1.2.3
-). New World monkeys in the family Atelidae are the only primates with tails that are prehensile. Many New World monkeys are small and almost all are arboreal, so knowledge of them is less comprehensive than that of the more easily observed Old World monkeys. Unlike most Old World monkeys, many New World monkeys form monogamous pair bonds, and show substantial paternal care of young.[7] They eat fruits, nuts, insects, flowers, bird eggs, spiders, and small mammals. Unlike humans and most Old World monkeys, their thumbs are not opposable[8] (except for some Cebids). </p>
+New World monkeys (except for the howler monkeys of genus Alouatta) also typically lack the trichromatic vision of Old World monkeys. Colour vision in New World primates relies on a single gene on the X-chromosome to produce pigments that absorb medium and long wavelength light, which contrasts with short wavelength light. As a result, males rely on a single medium/long pigment gene and are dichromatic, as are homozygous females. Heterozygous females may possess two alleles with different sensitivities within this range, and so can display trichromatic vision. New World monkeys in the family Atelidae are the only primates with tails that are prehensile. Many New World monkeys are small and almost all are arboreal, so knowledge of them is less comprehensive than that of the more easily observed Old World monkeys. Unlike most Old World monkeys, many New World monkeys form monogamous pair bonds, and show substantial paternal care of young. They eat fruits, nuts, insects, flowers, bird eggs, spiders, and small mammals. Unlike humans and most Old World monkeys, their thumbs are not opposable(except for some Cebids). </p>
 			</div>
 		</div>
 		
-			<!-- Image beside New world -->
-		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-3">
-			<div class="unit-spacer">
-				<img src="http://placehold.it/1000x300" class="flex-img" alt"Monkey eating fruit">
-			</div>
-		</div>
-		
+	
 	
 	
 	
@@ -96,6 +83,7 @@ Platyrrhines also differ from Old World monkeys in that they have twelve premola
 				<img src="http://placehold.it/600x450" class="flex-img" alt"Another Cute monkey">
 			</div>
 		</div>
+		
 		
 			<div class= "unit unit-s-1 unit-m-1-1  unit-l-2-3">
 				<div class="unit-spacer">
@@ -122,12 +110,14 @@ Platyrrhines also differ from Old World monkeys in that they have twelve premola
 				</div>
 			</div>
 			
-				<!-- Image beside old world -->
+					<!-- Image beside old world -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-3">
 			<div class="unit-spacer">
-				<img src="http://placehold.it/1000x300" class="flex-img" alt"Monkey eating fruit">
+				<img src="http://placehold.it/600x800" class="flex-img" alt"Monkey eating fruit">
 			</div>
 		</div> 
+		
+			
 		
 </div>
 
