didnt change shit but commiting it anyways

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: default
 			<div class="unit-spacer">
 				<h1>Monkeys</h1>
 				<p>	
-				Monkeys are a furry primate which come in many different sizes between small to medium-sized. They typically have a long tail, and hands for feet. There are about 260 known living species of monkey which can be sepreated into two groups called <a href="species.html" ><em> New world Monkeys </em>and<em> Old World Monkeys</em></a>. Most kinds of Monkeys live in trees in tropical countries, and are generally considered to be intelligent.</p>
+				Monkeys are a furry primate which come in many different sizes between small to medium-sized. They typically have a long tail, and hands for feet. There are about 260 known living species of monkey which can be sepreated into two groups called <a href="{{site.baseurl}}/species.html" ><em> New world Monkeys </em>and<em> Old World Monkeys</em></a>. Most kinds of Monkeys live in trees in tropical countries, and are generally considered to be intelligent.</p>
 			</div>
 		</div>
 		<!-- Small right top image -->
