--- a/habitats.html
+++ b/habitats.html
@@ -15,7 +15,7 @@ layout: default
 			<div class="unit-spacer">
 				<h1>Habitats</h1>
 				<p>	
-				he distribution for the Monkey covers may regions around the world. They tend to live in forest regions where they have lots of trees around them. Some of them live in the savannahs though or in the mountain regions. There are species of Monkeys that only live in trees. Others live in the trees as well as on land.</p>
+				The distribution for the Monkey covers many regions around the world. They tend to live in forest regions where they have lots of trees around them. Some of them live in the savannahs though or in the mountain regions. There are species of Monkeys that only live in trees. Others live in the trees as well as on land.</p>
 			</div>
 		</div>
 		
@@ -25,7 +25,6 @@ layout: default
 				<img src="http://placehold.it/600x450" class="flex-img" alt"Another Cute monkey">
 			</div>
 		</div>
-		
 		
 		
 		
