made image hide on small screen

--- a/habitats.html
+++ b/habitats.html
@@ -29,7 +29,7 @@ layout: default
 		
 		
 		<!-- Small/medium right above old world -->
-		<div class= "unit unit-s-1-3 unit-m-1-3 unit-l-hidden">
+		<div class= "unit unit-s-hidden unit-m-1-3 unit-l-hidden">
 			<div class="unit-spacer">
 				<img src="http://placehold.it/1000x820" class="flex-img" alt"Another Cute monkey">
 			</div>
