made image go big on small screen

--- a/habitats.html
+++ b/habitats.html
@@ -36,7 +36,7 @@ layout: default
 		</div>
 		
 		<!-- Small/medium left above old world -->
-		<div class= "unit unit-s-2-3 unit-m-2-3 unit-l-hidden">
+		<div class= "unit unit-s-1 unit-m-2-3 unit-l-hidden">
 			<div class="unit-spacer">
 				<img src="http://placehold.it/1000x400" class="flex-img" alt"Another Cute monkey">
 			</div>
