--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ layout: default
 		<!-- Small right top image -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-4">
 			<div class="unit-spacer">
-				<img src="http://placehold.it/600x450" class="flex-img" alt"Another Cute monkey">
+				<img src="images/monkeyindex1" class="flex-img" alt"Another Cute monkey">
 			</div>
 		</div>
 		
@@ -31,14 +31,14 @@ layout: default
 		<!-- Large  top image -->
 		<div class= "unit unit-s-1 unit-m-1 unit-l-hidden">
 			<div class="unit-spacer">
-				<img src="http://placehold.it/1000x200" class="flex-img" alt" Large image of a cute monkey">
+				<img src="images/monkeyindex4" class="flex-img" alt" Large image of a cute monkey">
 			</div>
 		</div>
 		
 		<!-- Image beside feeding -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-2-3">
 			<div class="unit-spacer">
-				<img src="http://placehold.it/1000x300" class="flex-img" alt"Monkey eating fruit">
+				<img src="images/monkeyindex5" class="flex-img" alt"Monkey eating fruit">
 			</div>
 		</div>
 		
@@ -55,13 +55,13 @@ layout: default
 		<!-- Image beside habitat left -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-3">
 			<div class="unit-spacer">
-				<img src="http://placehold.it/1000x450" class="flex-img" alt"Monkey in the jungle">
+				<img src="images/monkeyindex2" class="flex-img" alt"Monkey in the jungle">
 			</div>
 		</div>
 		<!-- Image beside habitat right -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-3">
 			<div class="unit-spacer">
-				<img src="http://placehold.it/1000x450" class="flex-img" alt"Monkey in the savanana">
+				<img src="images/monkeyindex3" class="flex-img" alt"Monkey in the savanana">
 			</div>
 		</div>
 		
