--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@ layout: default
 
 
 	<div class= "grid">
-		<!-- Small left top image -->
+	<!-- Small right top image -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-4">
 			<div class="unit-spacer">
-				<img src="http://placehold.it/600x450" class="flex-img" alt"Cute monkey">
+				<img src="images/monkeyindex1" class="flex-img" alt"Another Cute monkey">
 			</div>
 		</div>
 		
