--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
 	<!-- Small right top image -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-4">
 			<div class="unit-spacer">
-				<img src="images/monkeyindex1" class="flex-img" alt"Another Cute monkey">
+				<img src="images/monkeyindex6.png" class="flex-img" alt"Another Cute monkey">
 			</div>
 		</div>
 		
@@ -22,7 +22,7 @@ layout: default
 		<!-- Small right top image -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-4">
 			<div class="unit-spacer">
-				<img src="images/monkeyindex1" class="flex-img" alt"Another Cute monkey">
+				<img src="images/monkeyindex1.png" class="flex-img" alt"Another Cute monkey">
 			</div>
 		</div>
 		
@@ -31,14 +31,14 @@ layout: default
 		<!-- Large  top image -->
 		<div class= "unit unit-s-1 unit-m-1 unit-l-hidden">
 			<div class="unit-spacer">
-				<img src="images/monkeyindex4" class="flex-img" alt" Large image of a cute monkey">
+				<img src="images/monkeyindex4.png" class="flex-img" alt" Large image of a cute monkey">
 			</div>
 		</div>
 		
 		<!-- Image beside feeding -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-2-3">
 			<div class="unit-spacer">
-				<img src="images/monkeyindex5" class="flex-img" alt"Monkey eating fruit">
+				<img src="images/monkeyindex5.png" class="flex-img" alt"Monkey eating fruit">
 			</div>
 		</div>
 		
@@ -47,7 +47,7 @@ layout: default
 			<div class="unit-spacer">
 				<h2> Feeding Habits </h2>
 				<p> Monkeys have unique feeding habits. depending on the species, monkeys will consume different sources of food. Though they differ in diet, monkeys have similar behaviours which are derived from their physical needs, their intelligence and their habitat. <br>
-				<a href="" >More on feeding habits >></a> </p>
+				<a href="" >More on feeding habits ></a> </p>
 			</div>
 		</div>
 		
@@ -55,13 +55,13 @@ layout: default
 		<!-- Image beside habitat left -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-3">
 			<div class="unit-spacer">
-				<img src="images/monkeyindex2" class="flex-img" alt"Monkey in the jungle">
+				<img src="images/monkeyindex2.png" class="flex-img" alt"Monkey in the jungle">
 			</div>
 		</div>
 		<!-- Image beside habitat right -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-3">
 			<div class="unit-spacer">
-				<img src="images/monkeyindex3" class="flex-img" alt"Monkey in the savanana">
+				<img src="images/monkeyindex3.png" class="flex-img" alt"Monkey in the savanana">
 			</div>
 		</div>
 		
@@ -69,7 +69,7 @@ layout: default
 			<div class="unit-spacer">
 				<h2> Habitat </h2>
 				<p> Generally, monkeys live in forested areas with many trees although some species are known to live in the savannahs and mountain regiosn. Some monkeys live in trees and on land while other monkeys live exclusively in trees. <br>
-				<a href="" >More on where they live >></a> </p>
+				<a href="" >More on where they live ></a> </p>
 			</div>
 		</div>
 		
