--- a/species.html
+++ b/species.html
@@ -7,7 +7,7 @@ layout: default
 		<!-- Small left top image -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-4">
 			<div class="unit-spacer">
-				<img src="http://placehold.it/600x450" class="flex-img" alt"Cute monkey">
+				<img src="{{site.baseurl}}/images/species5.png" class="flex-img" alt"Cute monkey">
 			</div>
 		</div>
 		
@@ -22,7 +22,7 @@ layout: default
 		<!-- Small right top image -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-4">
 			<div class="unit-spacer">
-				<img src="http://placehold.it/600x450" class="flex-img" alt"Another Cute monkey">
+				<img src="{{site.baseurl}}/images/species8.png" class="flex-img" alt"Another Cute monkey">
 			</div>
 		</div>
 		
@@ -31,7 +31,7 @@ layout: default
 		<!-- Large  top image -->
 		<div class= "unit unit-s-1 unit-m-1 unit-l-hidden">
 			<div class="unit-spacer">
-				<img src="http://placehold.it/1000x200" class="flex-img" alt" Large image of a cute monkey">
+				<img src="{{site.baseurl}}/images/species4.png" class="flex-img" alt" Large image of a cute monkey">
 			</div>
 		</div>
 		
@@ -40,21 +40,21 @@ layout: default
 		<!-- Small/medium right above old world -->
 		<div class= "unit unit-s-1-3 unit-m-1-3 unit-l-hidden">
 			<div class="unit-spacer">
-				<img src="http://placehold.it/1000x830" class="flex-img" alt"Another Cute monkey">
+				<img src="{{site.baseurl}}/images/species3.png" class="flex-img" alt"Another Cute monkey">
 			</div>
 		</div>
 		
 		<!-- Small/medium left above old world -->
 		<div class= "unit unit-s-2-3 unit-m-2-3 unit-l-hidden">
 			<div class="unit-spacer">
-				<img src="http://placehold.it/1000x400" class="flex-img" alt"Another Cute monkey">
+				<img src="{{site.baseurl}}/images/species2.png"  class="flex-img" alt"Another Cute monkey">
 			</div>
 		</div>
 		
 			<!-- Image beside new world -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-3">
 			<div class="unit-spacer">
-				<img src="http://placehold.it/600x800" class="flex-img" alt"Monkey eating fruit">
+				<img src="{{site.baseurl}}/images/species1.png" class="flex-img" alt"Monkey eating fruit">
 			</div>
 		</div> 
 		
@@ -73,14 +73,14 @@ New World monkeys (except for the howler monkeys of genus Alouatta) also typical
 		<!-- Small/medium right above old world -->
 		<div class= "unit unit-s-1-2 unit-m-1-2 unit-l-hidden">
 			<div class="unit-spacer">
-				<img src="http://placehold.it/600x450" class="flex-img" alt"Another Cute monkey">
+				<img src="{{site.baseurl}}/images/species6.png" class="flex-img" alt"Another Cute monkey">
 			</div>
 		</div>
 		
 		<!-- Small/medium left above old world -->
 		<div class= "unit unit-s-1-2 unit-m-1-2 unit-l-hidden">
 			<div class="unit-spacer">
-				<img src="http://placehold.it/600x450" class="flex-img" alt"Another Cute monkey">
+				<img src="{{site.baseurl}}/images/species8.png" class="flex-img" alt"Another Cute monkey">
 			</div>
 		</div>
 		
@@ -88,7 +88,7 @@ New World monkeys (except for the howler monkeys of genus Alouatta) also typical
 					<!-- Image beside old world -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-3">
 			<div class="unit-spacer">
-				<img src="http://placehold.it/600x800" class="flex-img" alt"Monkey eating fruit">
+				<img src="{{site.baseurl}}/images/species7.png" class="flex-img" alt"Monkey eating fruit">
 			</div>
 		</div> 
 		
