--- a/species.html
+++ b/species.html
@@ -7,10 +7,10 @@ layout: default
 		<!-- Small left top image -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-4">
 			<div class="unit-spacer">
-				<img src="{{site.baseurl}}/images/species5.png" class="flex-img" alt"Cute monkey">
+				<img src="images/species5.png" class="flex-img" alt="Cute monkey">
 			</div>
 		</div>
-		
+	<main role="main" id="main"> 
 		<div class= "unit unit-s-1 unit-m-1  unit-l-2-4">
 			<div class="unit-spacer">
 				<h1>Monkey Types</h1>
@@ -18,11 +18,12 @@ layout: default
 				Types of monkeys are classified into two major groups, the New World primates (South and Central America) and the Old World primates (Asia and Africa). The major difference, besides living on different continents, is that the New World primates have tails that can grasp and hold things while the Old World primates can't do much with their tails and sometimes have no tail at all. New World primates do not have versatile opposable thumbs like many other primates and most Old World primates do.</p>
 			</div>
 		</div>
+	</main>
 		
 		<!-- Small right top image -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-4">
 			<div class="unit-spacer">
-				<img src="{{site.baseurl}}/images/species8.png" class="flex-img" alt"Another Cute monkey">
+				<img src="images/species8.png" class="flex-img" alt="Another Cute monkey">
 			</div>
 		</div>
 		
@@ -31,7 +32,7 @@ layout: default
 		<!-- Large  top image -->
 		<div class= "unit unit-s-1 unit-m-1 unit-l-hidden">
 			<div class="unit-spacer">
-				<img src="{{site.baseurl}}/images/species4.png" class="flex-img" alt" Large image of a cute monkey">
+				<img src="images/species4.png" class="flex-img" alt="Large image of a cute monkey">
 			</div>
 		</div>
 		
@@ -40,24 +41,25 @@ layout: default
 		<!-- Small/medium right above old world -->
 		<div class= "unit unit-s-1-3 unit-m-1-3 unit-l-hidden">
 			<div class="unit-spacer">
-				<img src="{{site.baseurl}}/images/species3.png" class="flex-img" alt"Another Cute monkey">
+				<img src="images/species3.png" class="flex-img" alt="Another Cute monkey">
 			</div>
 		</div>
 		
 		<!-- Small/medium left above old world -->
 		<div class= "unit unit-s-2-3 unit-m-2-3 unit-l-hidden">
 			<div class="unit-spacer">
-				<img src="{{site.baseurl}}/images/species2.png"  class="flex-img" alt"Another Cute monkey">
+				<img src="images/species2.png"  class="flex-img" alt="Another Cute monkey">
 			</div>
 		</div>
 		
 			<!-- Image beside new world -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-3">
 			<div class="unit-spacer">
-				<img src="{{site.baseurl}}/images/species1.png" class="flex-img" alt"Monkey eating fruit">
+				<img src="images/species1.png" class="flex-img" alt="Monkey eating fruit">
 			</div>
 		</div> 
 		
+	<aside role="complimentary" id="complimentary">
 		<div class= "unit unit-s-1 unit-m-1-1  unit-l-2-3">
 			<div class="unit-spacer">
 				<h2> New World Monkeys </h2>
@@ -65,7 +67,6 @@ layout: default
 New World monkeys (except for the howler monkeys of genus Alouatta) also typically lack the trichromatic vision of Old World monkeys. Colour vision in New World primates relies on a single gene on the X-chromosome to produce pigments that absorb medium and long wavelength light, which contrasts with short wavelength light. As a result, males rely on a single medium/long pigment gene and are dichromatic, as are homozygous females. Heterozygous females may possess two alleles with different sensitivities within this range, and so can display trichromatic vision. New World monkeys in the family Atelidae are the only primates with tails that are prehensile. Many New World monkeys are small and almost all are arboreal, so knowledge of them is less comprehensive than that of the more easily observed Old World monkeys. Unlike most Old World monkeys, many New World monkeys form monogamous pair bonds, and show substantial paternal care of young. They eat fruits, nuts, insects, flowers, bird eggs, spiders, and small mammals. Unlike humans and most Old World monkeys, their thumbs are not opposable(except for some Cebids). </p>
 			</div>
 		</div>
-		
 	
 	
 	
@@ -73,14 +74,14 @@ New World monkeys (except for the howler monkeys of genus Alouatta) also typical
 		<!-- Small/medium right above old world -->
 		<div class= "unit unit-s-1-2 unit-m-1-2 unit-l-hidden">
 			<div class="unit-spacer">
-				<img src="{{site.baseurl}}/images/species6.png" class="flex-img" alt"Another Cute monkey">
+				<img src="images/species6.png" class="flex-img" alt="Another Cute monkey">
 			</div>
 		</div>
 		
 		<!-- Small/medium left above old world -->
 		<div class= "unit unit-s-1-2 unit-m-1-2 unit-l-hidden">
 			<div class="unit-spacer">
-				<img src="{{site.baseurl}}/images/species8.png" class="flex-img" alt"Another Cute monkey">
+				<img src="images/species8.png" class="flex-img" alt="Another Cute monkey">
 			</div>
 		</div>
 		
@@ -88,11 +89,11 @@ New World monkeys (except for the howler monkeys of genus Alouatta) also typical
 					<!-- Image beside old world -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-3">
 			<div class="unit-spacer">
-				<img src="{{site.baseurl}}/images/species7.png" class="flex-img" alt"Monkey eating fruit">
+				<img src="images/species7.png" class="flex-img" alt="Monkey eating fruit">
 			</div>
 		</div> 
 		
-			
+		
 		
 		
 			<div class= "unit unit-s-1 unit-m-1-1  unit-l-2-3">
@@ -119,7 +120,7 @@ New World monkeys (except for the howler monkeys of genus Alouatta) also typical
 	Old world monkeys have 2 premolars and have a mandible premolar that is specialized for sharpening the upper canine teeth.  The molars in old world monkeys also feature sharp cusps.  These features allow the old world monkeys to incorporate meat along with tougher fruits and nuts into their diet.  New world monkeys have three premolars and large back molars designed more for fruit than meat.</p>
 				</div>
 			</div>
-
+		</aside>
 		
 </div>
 
