--- a/index.html
+++ b/index.html
@@ -2,27 +2,30 @@
 layout: default
 
 ---
+	
 
 
 	<div class= "grid">
 	<!-- Small right top image -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-4">
 			<div class="unit-spacer">
-				<img src="images/monkeyindex6.png" class="flex-img" alt"Another Cute monkey">
+				<img src="images/monkeyindex6.png" class="flex-img" alt="Another Cute monkey">
 			</div>
 		</div>
 		
+	<main role="main" id="main">
 		<div class= "unit unit-s-1 unit-m-1  unit-l-2-4">
 			<div class="unit-spacer">
 				<h1>Monkeys</h1>
 				<p>	
-				Monkeys are a furry primate which come in many different sizes between small to medium-sized. They typically have a long tail, and hands for feet. There are about 260 known living species of monkey which can be sepreated into two groups called <a href="{{site.baseurl}}/species.html" ><em> New world Monkeys </em>and<em> Old World Monkeys</em></a>. Most kinds of Monkeys live in trees in tropical countries, and are generally considered to be intelligent.</p>
+				Monkeys are a furry primate which come in many different sizes between small to medium-sized. They typically have a long tail, and hands for feet. There are about 260 known living species of monkey which can be sepreated into two groups called <a href="species.html" ><em> New world Monkeys </em>and<em> Old World Monkeys</em></a>. Most kinds of Monkeys live in trees in tropical countries, and are generally considered to be intelligent.</p>
 			</div>
 		</div>
+	</main>
 		<!-- Small right top image -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-4">
 			<div class="unit-spacer">
-				<img src="images/monkeyindex1.png" class="flex-img" alt"Another Cute monkey">
+				<img src="images/monkeyindex1.png" class="flex-img" alt="Another Cute monkey">
 			</div>
 		</div>
 		
@@ -31,40 +34,42 @@ layout: default
 		<!-- Large  top image -->
 		<div class= "unit unit-s-1 unit-m-1 unit-l-hidden">
 			<div class="unit-spacer">
-				<img src="images/monkeyindex4.png" class="flex-img" alt" Large image of a cute monkey">
+				<img src="images/monkeyindex4.png" class="flex-img" alt="Large image of a cute monkey">
 			</div>
 		</div>
 		
 		<!-- Image beside feeding -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-2-3">
 			<div class="unit-spacer">
-				<img src="images/monkeyindex5.png" class="flex-img" alt"Monkey eating fruit">
+				<img src="images/monkeyindex5.png" class="flex-img" alt="Monkey eating fruit">
 			</div>
 		</div>
 		
-		
+	<aside role="complimentary" id="complimentary">
 		<div class= "unit unit-s-1 unit-m-1-2  unit-l-1-3">
 			<div class="unit-spacer">
 				<h2> Feeding Habits </h2>
 				<p> Monkeys have unique feeding habits. depending on the species, monkeys will consume different sources of food. Though they differ in diet, monkeys have similar behaviours which are derived from their physical needs, their intelligence and their habitat. <br>
-				<a href="" >More on feeding habits ></a> </p>
+				<a href="" >More on feeding habits</a> </p>
 			</div>
 		</div>
+
 		
 	
 		<!-- Image beside habitat left -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-3">
 			<div class="unit-spacer">
-				<img src="images/monkeyindex2.png" class="flex-img" alt"Monkey in the jungle">
+				<img src="images/monkeyindex2.png" class="flex-img" alt="Monkey in the jungle">
 			</div>
 		</div>
 		<!-- Image beside habitat right -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-3">
 			<div class="unit-spacer">
-				<img src="images/monkeyindex3.png" class="flex-img" alt"Monkey in the savanana">
+				<img src="images/monkeyindex3.png" class="flex-img" alt="Monkey in the savanana">
 			</div>
 		</div>
-		
+	
+
 		<div class= "unit unit-s-1 unit-m-1-2  unit-l-1-3">
 			<div class="unit-spacer">
 				<h2> Habitat </h2>
@@ -72,6 +77,7 @@ layout: default
 				<a href="" >More on where they live ></a> </p>
 			</div>
 		</div>
+	</aside>
 		
 		
 </div>
