--- a/habitats.html
+++ b/habitats.html
@@ -7,7 +7,7 @@ layout: default
 		<!-- Small left top image -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-4">
 			<div class="unit-spacer">
-				<img src="http://placehold.it/600x450" class="flex-img" alt"Cute monkey">
+			
 			</div>
 		</div>
 		
@@ -22,30 +22,30 @@ layout: default
 		<!-- Small right top image -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-4">
 			<div class="unit-spacer">
-				<img src="http://placehold.it/600x450" class="flex-img" alt"Another Cute monkey">
+				
 			</div>
 		</div>
 		
 		
 		
 		<!-- Small/medium right above old world -->
-		<div class= "unit unit-s-hidden unit-m-1-3 unit-l-hidden">
+		<div class= "unit unit-s-hidden unit-m-1-3 unit-l-1-3">
 			<div class="unit-spacer">
-				<img src="http://placehold.it/1000x820" class="flex-img" alt"Another Cute monkey">
+				<img src="{{site.baseurl}}images/jungle.png" class="flex-img" alt"Jungle Images">
 			</div>
 		</div>
 		
 		<!-- Small/medium left above old world -->
-		<div class= "unit unit-s-1 unit-m-2-3 unit-l-hidden">
+		<div class= "unit unit-s-1 unit-m-2-3 unit-l-2-3">
 			<div class="unit-spacer">
-				<img src="http://placehold.it/1000x400" class="flex-img" alt"Another Cute monkey">
+				<img src="{{site.baseurl}}images/savannah.png" class="flex-img" alt"Savannah Image">
 			</div>
 		</div>
 		
 			<!-- Image beside new world -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-3">
 			<div class="unit-spacer">
-				<img src="http://placehold.it/600x800" class="flex-img" alt"Monkey eating fruit">
+				<img src="{{site.baseurl}}images/monkeyssavannah1.png" class="flex-img" alt"Monkey in savannah">
 			</div>
 		</div> 
 		
@@ -60,27 +60,28 @@ layout: default
 		
 	
 	
-	
+		<!-- Small/medium left above old world -->
+			<div class= "unit unit-s-1-2 unit-m-1-2 unit-l-hidden">
+				<div class="unit-spacer">
+					<img src="{{site.baseurl}}images/monkeyjungle1.png" class="flex-img" alt"Monkey in the jungle">
+				</div>
+			</div>
+			
 	
 		<!-- Small/medium right above old world -->
 		<div class= "unit unit-s-1-2 unit-m-1-2 unit-l-hidden">
 			<div class="unit-spacer">
-				<img src="http://placehold.it/600x450" class="flex-img" alt"Another Cute monkey">
+				<img src="{{site.baseurl}}images/monkeyssavannah2.png" class="flex-img" alt"Monkey in the savannah">
 			</div>
 		</div>
 		
-		<!-- Small/medium left above old world -->
-		<div class= "unit unit-s-1-2 unit-m-1-2 unit-l-hidden">
-			<div class="unit-spacer">
-				<img src="http://placehold.it/600x450" class="flex-img" alt"Another Cute monkey">
-			</div>
-		</div>
+		
 		
 					
 					<!-- Image beside old world -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-3">
 			<div class="unit-spacer">
-				<img src="http://placehold.it/600x800" class="flex-img" alt"Monkey eating fruit">
+				<img src="{{site.baseurl}}images/monkeyjungle2.png" class="flex-img" alt"Monkey in Jungle">
 			</div>
 		</div> 
 		
