--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
 	<!-- Small right top image -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-4">
 			<div class="unit-spacer">
-				<img src="images/monkeyindex6.png" class="flex-img" alt="Another Cute monkey">
+				<img src="{{site.baseurl}}images/monkeyindex6.png" class="flex-img" alt="Another Cute monkey">
 			</div>
 		</div>
 		
@@ -25,7 +25,7 @@ layout: default
 		<!-- Small right top image -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-4">
 			<div class="unit-spacer">
-				<img src="images/monkeyindex1.png" class="flex-img" alt="Another Cute monkey">
+				<img src="{{site.baseurl}}images/monkeyindex1.png" class="flex-img" alt="Another Cute monkey">
 			</div>
 		</div>
 		
@@ -34,14 +34,14 @@ layout: default
 		<!-- Large  top image -->
 		<div class= "unit unit-s-1 unit-m-1 unit-l-hidden">
 			<div class="unit-spacer">
-				<img src="images/monkeyindex4.png" class="flex-img" alt="Large image of a cute monkey">
+				<img src="{{site.baseurl}}images/monkeyindex4.png" class="flex-img" alt="Macaque Monkey">
 			</div>
 		</div>
 		
 		<!-- Image beside feeding -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-2-3">
 			<div class="unit-spacer">
-				<img src="images/monkeyindex5.png" class="flex-img" alt="Monkey eating fruit">
+				<img src="{{site.baseurl}}images/monkeyindex5.png" class="flex-img" alt="Monkey eating fruit">
 			</div>
 		</div>
 		
@@ -59,13 +59,13 @@ layout: default
 		<!-- Image beside habitat left -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-3">
 			<div class="unit-spacer">
-				<img src="images/monkeyindex2.png" class="flex-img" alt="Monkey in the jungle">
+				<img src="{{site.baseurl}}images/monkeyindex2.png" class="flex-img" alt="orangutan">
 			</div>
 		</div>
 		<!-- Image beside habitat right -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-3">
 			<div class="unit-spacer">
-				<img src="images/monkeyindex3.png" class="flex-img" alt="Monkey in the savanana">
+				<img src="{{site.baseurl}}images/monkeyindex3.png" class="flex-img" alt="cheeky monkey">
 			</div>
 		</div>
 	
