--- a/species.html
+++ b/species.html
@@ -5,14 +5,14 @@ layout: default
 
 <div class= "grid">
 		<!-- Small left top image -->
-		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-4">
+		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-3">
 			<div class="unit-spacer">
 				<img src="{{site.baseurl}}images/species5.png" class="flex-img" alt="The White Handed Gibbon">
 			</div>
 		</div>
 		
 	<main role="main" id="main"> 
-		<div class= "unit unit-s-1 unit-m-1  unit-l-2-4">
+		<div class= "unit unit-s-1 unit-m-1  unit-l-2-3">
 			<div class="unit-spacer">
 				<h1>Monkey Types</h1>
 				<p>	
@@ -20,13 +20,6 @@ layout: default
 			</div>
 		</div>
 	</main>
-		
-		<!-- Small right top image -->
-		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-4">
-			<div class="unit-spacer">
-				<img src="{{site.baseurl}}images/species8.png" class="flex-img" alt="proboscis monkey">
-			</div>
-		</div>
 		
 		
 		
@@ -53,7 +46,9 @@ layout: default
 			</div>
 		</div>
 		
-			<!-- Image beside new world -->
+			
+	
+		<!-- Large Image beside new world of  golden lion tamarin-->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-3">
 			<div class="unit-spacer">
 				<img src="{{site.baseurl}}images/species1.png" class="flex-img" alt="golden lion tamarin">
@@ -61,7 +56,7 @@ layout: default
 		</div> 
 		
 	<aside role="complimentary" id="complimentary">
-		<div class= "unit unit-s-1 unit-m-1-1  unit-l-2-3">
+		<div class= "unit unit-s-1 unit-m-1  unit-l-2-3">
 			<div class="unit-spacer">
 				<h2> New World Monkeys </h2>
 				<p> New World monkeys are small to mid-sized primates, ranging from the pygmy marmoset (the world's smallest monkey), at 14 to 16 cm (5.5 to 6.3 in) and a weight of 120 to 190 grams (4.2 to 6.7 oz) to the southern muriqui, at 55 to 70 cm (22 to 28 in) and a weight of 12 to 15 kg (26 to 33 lb). </p>
@@ -73,32 +68,28 @@ layout: default
 <p>Many New World monkeys are small and almost all are arboreal, so knowledge of them is less comprehensive than that of the more easily observed Old World monkeys. Unlike most Old World monkeys, many New World monkeys form monogamous pair bonds, and show substantial paternal care of young. They eat fruits, nuts, insects, flowers, bird eggs, spiders, and small mammals. Unlike humans and most Old World monkeys, their thumbs are not opposable(except for some Cebids). </p>
 			</div>
 		</div>
+
 	
-	
-	
-	
-		<!-- Small/medium right above old world -->
+		<!-- Small/medium right above old world  of golden langur-->
 		<div class= "unit unit-s-1-2 unit-m-1-2 unit-l-hidden">
 			<div class="unit-spacer">
 				<img src="{{site.baseurl}}images/species6.png" class="flex-img" alt="Golden langur">
 			</div>
 		</div>
 		
-		<!-- Small/medium left above old world -->
+		<!-- Small/medium left above old world of proboscis monkey -->
 		<div class= "unit unit-s-1-2 unit-m-1-2 unit-l-hidden">
 			<div class="unit-spacer">
 				<img src="{{site.baseurl}}images/species8.png" class="flex-img" alt="proboscis monkey">
 			</div>
 		</div>
 		
-					
-					<!-- Image beside old world -->
+		<!-- Large Image beside old world of Golden langur-->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-3">
 			<div class="unit-spacer">
 				<img src="{{site.baseurl}}images/species7.png" class="flex-img" alt="Golden langur">
 			</div>
 		</div> 
-		
 		
 		
 		
@@ -127,6 +118,8 @@ layout: default
 				</div>
 			</div>
 		</aside>
+				
+
 		
 </div>
 
