--- a/habitats.html
+++ b/habitats.html
@@ -4,7 +4,7 @@ layout: default
 ---
 
 <div class= "grid">
-		<!-- Small left top image -->
+		<!-- Small left top -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-4">
 			<div class="unit-spacer">
 			
@@ -19,7 +19,7 @@ layout: default
 			</div>
 		</div>
 		
-		<!-- Small right top image -->
+		<!-- Small right top -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-4">
 			<div class="unit-spacer">
 				
@@ -28,21 +28,21 @@ layout: default
 		
 		
 		
-		<!-- Small/medium right above old world -->
+		<!-- Small/medium right above first paragraph -->
 		<div class= "unit unit-s-hidden unit-m-1-3 unit-l-1-3">
 			<div class="unit-spacer">
 				<img src="{{site.baseurl}}images/jungle.png" class="flex-img" alt"Jungle Images">
 			</div>
 		</div>
 		
-		<!-- Small/medium left above old world -->
+		<!-- Small/medium left above first paragraph -->
 		<div class= "unit unit-s-1 unit-m-2-3 unit-l-2-3">
 			<div class="unit-spacer">
 				<img src="{{site.baseurl}}images/savannah.png" class="flex-img" alt"Savannah Image">
 			</div>
 		</div>
 		
-			<!-- Image beside new world -->
+			<!-- Large Image beside first paragraph -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-3">
 			<div class="unit-spacer">
 				<img src="{{site.baseurl}}images/monkeyssavannah1.png" class="flex-img" alt"Monkey in savannah">
@@ -60,7 +60,7 @@ layout: default
 		
 	
 	
-		<!-- Small/medium left above old world -->
+		<!-- Small/medium left above second paragraph -->
 			<div class= "unit unit-s-1-2 unit-m-1-2 unit-l-hidden">
 				<div class="unit-spacer">
 					<img src="{{site.baseurl}}images/monkeyjungle1.png" class="flex-img" alt"Monkey in the jungle">
@@ -68,7 +68,7 @@ layout: default
 			</div>
 			
 	
-		<!-- Small/medium right above old world -->
+		<!-- Small/medium right above second paragraph -->
 		<div class= "unit unit-s-1-2 unit-m-1-2 unit-l-hidden">
 			<div class="unit-spacer">
 				<img src="{{site.baseurl}}images/monkeyssavannah2.png" class="flex-img" alt"Monkey in the savannah">
@@ -78,7 +78,7 @@ layout: default
 		
 		
 					
-					<!-- Image beside old world -->
+					<!--Large Image beside second paragraph -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-3">
 			<div class="unit-spacer">
 				<img src="{{site.baseurl}}images/monkeyjungle2.png" class="flex-img" alt"Monkey in Jungle">
