--- a/habitats.html
+++ b/habitats.html
@@ -2,7 +2,8 @@
 layout: default
 
 ---
-
+<body>
+<html>
 <div class= "grid">
 		<!-- Small left top -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-4">
@@ -11,13 +12,13 @@ layout: default
 			</div>
 		</div>
 		
-		<div class= "unit unit-s-1 unit-m-1  unit-l-2-4">
+		<main role="main" id="main" class= "unit unit-s-1 unit-m-1  unit-l-2-4">
 			<div class="unit-spacer">
 				<h1>Habitats</h1>
 				<p>	
 				The distribution for the Monkey covers many regions around the world. They tend to live in forest regions where they have lots of trees around them. Some of them live in the savannahs though or in the mountain regions. There are species of Monkeys that only live in trees. Others live in the trees as well as on land.</p>
 			</div>
-		</div>
+		</main>
 		
 		<!-- Small right top -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-4">
@@ -42,7 +43,12 @@ layout: default
 			</div>
 		</div>
 		
-			<!-- Large Image beside first paragraph -->
+	
+</div>
+
+
+	<aside class="grid" role="complimentary" id="complimentary">
+		<!-- Large Image beside first paragraph -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-3">
 			<div class="unit-spacer">
 				<img src="{{site.baseurl}}images/monkeyssavannah1.png" class="flex-img" alt"Monkey in savannah">
@@ -97,10 +103,8 @@ layout: default
 				Another problem is that with many Monkey species the males have to leave when they reach the age of maturity. In some instances the females do as well. This is all part of nature to make sure that inbreeding isn’t taking place regularly in the groups. However, where are those that leave their place of birth going to go? They have too much competition from aggressive groups that won’t accept anyone else coming in. Too often they die due to predation or a lack of food in the regions where they end up.</p>
 				</div>
 			</div>
-
+</aside>
 		
-</div>
-
 
 	
 </body>
