fixing stuff like type and navgigation

--- a/habitats.html
+++ b/habitats.html
@@ -34,14 +34,14 @@ layout: default
 		<!-- Small/medium right above first paragraph -->
 		<div class= "unit unit-s-hidden unit-m-1-3 unit-l-1-3">
 			<div class="unit-spacer">
-				<img src="{{site.baseurl}}images/jungle.png" class="flex-img" alt"Jungle Images">
+				<img src="{{site.baseurl}}images/jungle.jpg" class="flex-img" alt"Jungle Images">
 			</div>
 		</div>
 		
 		<!-- Small/medium left above first paragraph -->
 		<div class= "unit unit-s-1 unit-m-2-3 unit-l-2-3">
 			<div class="unit-spacer">
-				<img src="{{site.baseurl}}images/savannah.png" class="flex-img" alt"Savannah Image">
+				<img src="{{site.baseurl}}images/savannah.jpg" class="flex-img" alt"Savannah Image">
 			</div>
 		</div>
 		
@@ -53,7 +53,7 @@ layout: default
 		<!-- Large Image beside first paragraph -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-3">
 			<div class="unit-spacer">
-				<img src="{{site.baseurl}}images/monkeyssavannah1.png" class="flex-img" alt"Monkey in savannah">
+				<img src="{{site.baseurl}}images/monkeyssavannah1.jpg" class="flex-img" alt"Monkey in savannah">
 			</div>
 		</div> 
 		
@@ -71,7 +71,7 @@ layout: default
 		<!-- Small/medium left above second paragraph -->
 			<div class= "unit unit-s-1-2 unit-m-1-2 unit-l-hidden">
 				<div class="unit-spacer">
-					<img src="{{site.baseurl}}images/monkeyjungle1.png" class="flex-img" alt"Monkey in the jungle">
+					<img src="{{site.baseurl}}images/monkeyjungle1.jpg" class="flex-img" alt"Monkey in the jungle">
 				</div>
 			</div>
 			
@@ -79,7 +79,7 @@ layout: default
 		<!-- Small/medium right above second paragraph -->
 		<div class= "unit unit-s-1-2 unit-m-1-2 unit-l-hidden">
 			<div class="unit-spacer">
-				<img src="{{site.baseurl}}images/monkeyssavannah2.png" class="flex-img" alt"Monkey in the savannah">
+				<img src="{{site.baseurl}}images/monkeyssavannah2.jpg" class="flex-img" alt"Monkey in the savannah">
 			</div>
 		</div>
 		
@@ -89,7 +89,7 @@ layout: default
 					<!--Large Image beside second paragraph -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1-3">
 			<div class="unit-spacer">
-				<img src="{{site.baseurl}}images/monkeyjungle2.png" class="flex-img" alt"Monkey in Jungle">
+				<img src="{{site.baseurl}}images/monkeyjungle2.jpg" class="flex-img" alt"Monkey in Jungle">
 			</div>
 		</div> 
 		
