added slashes on images

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ layout: default
 		<!-- Large  top image -->
 		<div class= "unit unit-s-1 unit-m-1 unit-l-1">
 			<div class="unit-spacer">
-				<img src="images/monkeyindex4.jpg" class="flex-img" alt="Large image of a cute monkey">
+				<img src="{{site.baseurl}}/images/monkeyindex4.jpg" class="flex-img" alt="Large image of a cute monkey">
 			</div>
 		</div>
 		
@@ -40,7 +40,7 @@ layout: default
 	<aside class="grid" role="complimentary" id="complimentary">
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-2-3">
 				<div class="unit-spacer">
-					<img src="images/monkeyindex2.jpg" class="flex-img" alt="Monkey in the jungle">
+					<img src="{{site.baseurl}}/images/monkeyindex2.jpg" class="flex-img" alt="Monkey in the jungle">
 				</div>
 			</div>
 		<div class= "unit unit-s-1 unit-m-1-2  unit-l-1-3">
@@ -58,7 +58,7 @@ layout: default
 		<!-- Image beside habitat right -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-2-3">
 			<div class="unit-spacer">
-				<img src="images/monkeyindex3.jpg" class="flex-img" alt="Monkey in the savanana">
+				<img src="{{site.baseurl}}/images/monkeyindex3.jpg" class="flex-img" alt="Monkey in the savanana">
 			</div>
 		</div>
 	
