--- a/species.html
+++ b/species.html
@@ -35,7 +35,7 @@ layout: default
 		<!-- Large  top image -->
 		<div class= "unit unit-s-1 unit-m-1 unit-l-hidden">
 			<div class="unit-spacer">
-				<img src="{{site.baseurl}}images/species4.jpg" class="flex-img" alt="coiba island howler">
+				<img src="{{site.baseurl}}/images/species4.jpg" class="flex-img" alt="coiba island howler">
 			</div>
 		</div>
 		
@@ -44,14 +44,14 @@ layout: default
 		<!-- Small/medium right above old world -->
 		<div class= "unit unit-s-1-3 unit-m-1-3 unit-l-1-3">
 			<div class="unit-spacer">
-				<img src="{{site.baseurl}}images/species3.jpg" class="flex-img" alt="The White Handed Gibbon">
+				<img src="{{site.baseurl}}/images/species3.jpg" class="flex-img" alt="The White Handed Gibbon">
 			</div>
 		</div>
 		
 		<!-- Small/medium left above old world -->
 		<div class= "unit unit-s-2-3 unit-m-2-3 unit-l-2-3">
 			<div class="unit-spacer">
-				<img src="{{site.baseurl}}images/species2.jpg"  class="flex-img" alt="golden lion tamarin">
+				<img src="{{site.baseurl}}/images/species2.jpg"  class="flex-img" alt="golden lion tamarin">
 			</div>
 		</div>
 		
@@ -76,7 +76,7 @@ layout: default
 		<!-- Large  top image -->
 		<div class= "unit unit-s-hidden unit-m-hidden unit-l-1">
 			<div class="unit-spacer">
-				<img src="{{site.baseurl}}images/species4.jpg" class="flex-img" alt="coiba island howler">
+				<img src="{{site.baseurl}}/images/species4.jpg" class="flex-img" alt="coiba island howler">
 			</div>
 		</div>
 		
@@ -84,14 +84,14 @@ layout: default
 		<!-- Small/medium right above old world  of golden langur-->
 		<div class= "unit unit-s-1-2 unit-m-1-2 unit-l-1-2">
 			<div class="unit-spacer">
-				<img src="{{site.baseurl}}images/species6.jpg" class="flex-img" alt="Golden langur">
+				<img src="{{site.baseurl}}/images/species6.jpg" class="flex-img" alt="Golden langur">
 			</div>
 		</div>
 		
 		<!-- Small/medium left above old world of proboscis monkey -->
 		<div class= "unit unit-s-1-2 unit-m-1-2 unit-l-1-2">
 			<div class="unit-spacer">
-				<img src="{{site.baseurl}}images/species8.jpg" class="flex-img" alt="proboscis monkey">
+				<img src="{{site.baseurl}}/images/species8.jpg" class="flex-img" alt="proboscis monkey">
 			</div>
 		</div>
 		
