added 404 page and image

--- a/404.html
+++ b/404.html
@@ -2,8 +2,15 @@
 layout: default
 
 ---
+
 <body>
 <html>
+<div class= "grid">		
+	<!-- bottom images Left -->
+		<div class="unit unit-s-1 unit-m-1 unit-l-1"> <img src="{{site.baseurl}}/images/404.png" class="flex-img" alt"ERROR 404. Page Not Found"> 
+		</div>
+</div>
+
 
 </body>
 </html>
